# edge-python-sdk

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sync-upstream.yml
docs/: comparison-with-upstream.md  providers.md  quickstart.md  release.md  upgrading-from-latitudesh.md
docs/runbooks/: sync-upstream-app.md
patches/: 0001-site-enum-permissive.patch  0002-plan-enum-permissive.patch  0003-os-enum-permissive.patch  README.md
scripts/: apply-patches.sh  refresh-upstream.sh
src/edge_provider_sdk/: __init__.py  catalog.py  client.py
src/edge_provider_sdk/models/: __init__.py
src/edge_python_sdk/: __init__.py  client.py  providers.py
src/edge_python_sdk/models/: __init__.py
tests/conformance/: conftest.py  test_wire_format.py
tests/integration/: test_with_adapter.py
tests/unit/: test_catalog.py  test_client_construction.py  test_enum_permissiveness.py  test_smoke.py
