[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "edge-python-sdk"
version = "0.1.1"
description = "Single Python client for Latitude-shaped compute providers — wraps latitudesh-python-sdk with permissive catalog enums."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "edge-python-sdk contributors" }]
keywords = ["latitude", "bare-metal", "compute", "sdk", "digital-frontier", "akash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "latitudesh-python-sdk==3.0.5",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Digital-Frontier-LDA/edge-python-sdk"
Issues = "https://github.com/Digital-Frontier-LDA/edge-python-sdk/issues"
Changelog = "https://github.com/Digital-Frontier-LDA/edge-python-sdk/blob/main/CHANGELOG.md"

[tool.edge-python-sdk]
upstream-package = "latitudesh-python-sdk"
upstream-version = "3.0.5"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_python_sdk"]
# `_generated/` is gitignored (it's built from patches/, not authored), so by
# default hatch's gitignore-aware file selector would drop it from the wheel.
# `artifacts` overrides that — the patched SDK *is* what wheel consumers need.
artifacts = ["src/edge_python_sdk/_generated/**"]

[tool.hatch.build.targets.sdist]
include = [
    "src/edge_python_sdk",
    "patches",
    "scripts",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SPEC.md",
    "pyproject.toml",
]
# The sdist ships only the *recipe* — patches + apply-patches.sh — so any
# rebuild from sdist regenerates `_generated/` against the pinned upstream.
exclude = ["src/edge_python_sdk/_generated/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/edge_python_sdk/_generated/**" = ["ALL"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["src/edge_python_sdk/_generated/"]

[[tool.mypy.overrides]]
module = "edge_python_sdk._generated.*"
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
